force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Account__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Account__c</fullName>
        <description>Account for which this price was negotiated.</description>
        <inlineHelpText>Account for which this price was negotiated.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>R00N70000001olI5EAI</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>