force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Contract__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sales contract that governs this price.</description>
        <inlineHelpText>Sales contract that governs this price.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>ContractedPrices</relationshipName>
        <type>Lookup</type>
    </CustomField>