force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Description__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Description__c</fullName>
        <description>Description for the Contracted Price</description>
        <inlineHelpText>Description for this Contracted Price. This will be copied into &quot;Special Price Description&quot; of Quote line items using this price.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </CustomField>