force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Discount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Discount off the list price (percent) represented by this Contracted Price. Either this field or Price should be set but not both.</description>
        <inlineHelpText>Discount off the Price Book price (percent) represented by this Contracted Price. Either this field or Price should be set but not both.</inlineHelpText>
        <label>Discount</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>