force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__DiscountSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Volume discount schedule to use for this product with this customer.</description>
        <inlineHelpText>Volume discount schedule to use for this product with this customer.</inlineHelpText>
        <label>Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>ContractedPrices</relationshipName>
        <type>Lookup</type>
    </CustomField>