force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__EffectiveDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__EffectiveDate__c</fullName>
        <description>Effective date for this contracted price.</description>
        <inlineHelpText>Date this contracted price becomes effective.</inlineHelpText>
        <label>Effective Date</label>
        <type>Date</type>
    </CustomField>