force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__FilterValue__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>Value the filter field is tested against to determine if this contracted price should apply.</description>
        <inlineHelpText>Value the filter field is tested against to determine if this contracted price should apply.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>