force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__NonDiscountable__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NonDiscountable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that marks the line covered by this price as non-discountable. Overrides Non Discountable flag on the product.</description>
        <inlineHelpText>Select the checkbox to disallow further discounting of this product.</inlineHelpText>
        <label>Non Discountable</label>
        <type>Checkbox</type>
    </CustomField>