force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Operator__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Operator__c</fullName>
        <description>Operator used to evaluate Filter Field value against Filter Value.</description>
        <inlineHelpText>Select the operate to use when matching the contents of the Filter Field with the Filter Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>