force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__OriginalQuoteLine__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OriginalQuoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Quote Line that originated this Contracted Price.</description>
        <inlineHelpText>The Quote Line that originated this Contracted Price.</inlineHelpText>
        <label>Original Quote Line</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>ContractedPrices</relationshipName>
        <type>Lookup</type>
    </CustomField>