force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Price__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Price__c</fullName>
        <description>Actual price that was negotiated. This value will override any other price such as the one from a price book or a volume-discounted price.</description>
        <inlineHelpText>Enter the price that has been negotiated with the customer. This value will override any other price such as the one from a price book or a volume-discounted price.</inlineHelpText>
        <label>Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>