force-app/main/default/objects/SBQQ__ContractedPrice__c/fields/SBQQ__Product__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product for which this price was negotiated.</description>
        <inlineHelpText>Select a product from any price book that you want to apply to this discount.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Contracted Prices</relationshipLabel>
        <relationshipName>ContractedPrices</relationshipName>
        <type>Lookup</type>
    </CustomField>