force-app/main/default/objects/SBQQ__ContractedPrice__c/validationRules/SBQQ__Discount_or_price_required.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Discount_or_price_required</fullName>
        <active>true</active>
        <description>Requires either Discount, Price, or Discount Schedule be entered.</description>
        <errorConditionFormula>AND(ISBLANK(SBQQ__Discount__c),ISBLANK(SBQQ__Price__c), ISBLANK(SBQQ__DiscountSchedule__c))</errorConditionFormula>
        <errorMessage>You must enter either Discount, Price, or Discount Schedule.</errorMessage>
    </ValidationRule>