force-app/main/default/objects/SBQQ__ContractedPrice__c/validationRules/SBQQ__Either_product_or_filter.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Either_product_or_filter</fullName>
        <active>true</active>
        <description>Either product or filter must be specified; not both.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(SBQQ__Product__c)),NOT(ISPICKVAL(SBQQ__FilterField__c,&apos;&apos;)))</errorConditionFormula>
        <errorMessage>You may not specify both product and filter.</errorMessage>
    </ValidationRule>