force-app/main/default/objects/SBQQ__ContractedPrice__c/validationRules/SBQQ__Filter_requires_operators.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Filter_requires_operators</fullName>
        <active>true</active>
        <description>Operator must be entered when filter is specified.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__Operator__c,&apos;&apos;),NOT(ISPICKVAL(SBQQ__FilterField__c,&apos;&apos;)))</errorConditionFormula>
        <errorMessage>Operator is required when Filter Field is specified.</errorMessage>
    </ValidationRule>