force-app/main/default/objects/SBQQ__ContractedPrice__c/validationRules/SBQQ__Product_or_filter_required.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Product_or_filter_required</fullName>
        <active>true</active>
        <description>Requires that product or filter be specified.</description>
        <errorConditionFormula>AND(ISBLANK(SBQQ__Product__c),ISPICKVAL(SBQQ__FilterField__c,&apos;&apos;))</errorConditionFormula>
        <errorMessage>You must specify either product or filter field</errorMessage>
    </ValidationRule>